package common.Exceptions;

public class ReceivingDataException extends Exception{
    public ReceivingDataException(String message){
        super(message);
    }
}
