package common.Exceptions;

public class SendingDataException extends Exception{
    public SendingDataException(String message){
        super(message);
    }
}
