package common.Exceptions;

public class UsernameNotFoundException extends AuthorizationException {
    public UsernameNotFoundException(String username) {
        super(String.format("User with username %s was not found!", username));
    }
}
