package common.net.requests;

/**
 * Enum for {@link ClientRequest} types
 */
public enum ClientRequestType {
    EXECUTE_COMMAND,
    CHECK_ID,
    IS_COLLECTION_EMPTY,
    SIGN_IN,
    LOG_IN,
    CHECK_USERNAME
}
