package common.net.requests;

import java.io.Serializable;

/**
 * Enum for {@link ExecuteCommandResponse} result states
 */
public enum ResultState implements Serializable {
    SUCCESS,
    EXCEPTION
}
